# POMPW

./: .gitignore  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: ui-tests.yml
api_tests/: requirements.txt
api_tests/src/config/: base_url.py  headers.py
api_tests/src/services/: base_client.py  knowleges
api_tests/src/services/users/: endpoints.py  model.py  user_client.py  user_model.py
api_tests/tests/data/user_test_data/: constants.py
api_tests/tests/user_tests/test_create_user/: test_create_user.py
api_tests/tests/user_tests/test_get_user/: test_get_user.py
api_tests/tests/user_tests/test_get_users/: test_get_user.py  test_get_users.py
backend_services/base_app/: database.py  main.py
backend_services/services/: user_service.py
backend_services/services/models/: user_model.py
backend_services/services/tables/: user_table.py
backend_services/tables/: user_table.py
backend_services/users/: user_service.py  users.json
backend_services/utils/users/: load_users.py  users_db.json
config/: data.py  links.py  orangehrm_all_cookies.json
fixtures/: __init__.py  auth_via_cookies_fixture.py  pages_fixtures.py
pages/: base_page.py  dashboard_page.py  login_page.py  my_info_page.py
pages/components/: __init__.py  sidebar.py
tests/: test.py
tests/ui-tests/my_info_page/: test_change_first_and_middle_name.py
ui_tests/: conftest.py  pytest.ini  requirements.txt
ui_tests/src/fixtures/: __init__.py  auth_via_cookies_fixture.py  pages_fixtures.py
ui_tests/src/pages/: base_page.py  dashboard_page.py  login_page.py  my_info_page.py
(+4 files in other folders)
