[project]
name = "pompw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "allure-pytest==2.15.3",
    "dotenv==0.9.9",
    "faker==40.1.0",
    "playwright==1.57.0",
    "pydantic==2.12.5",
    "pytest==9.0.2",
    "pytest-playwright==0.7.2",
    "requests==2.32.5",
]
