[project]
name = "pompw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "allure-pytest==2.15.3",
    "python-dotenv==1.2.1",
    "faker==40.1.0",
    "fastapi>=0.129.0",
    "playwright==1.57.0",
    "pydantic[email]==2.12.5",
    "pytest==9.0.2",
    "pytest-playwright==0.7.2",
    "requests==2.32.5",
    "uvicorn>=0.41.0",
    "loguru",
    "sqlalchemy>=2.0.46"
]
